--- a/IDE/v.02/common/src/net/vdombox/view/skins/VdomButtonSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/view/skins/VdomButtonSkin.mxml
@@ -1,42 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<!--
-
-ADOBE SYSTEMS INCORPORATED
-Copyright 2008 Adobe Systems Incorporated
-All Rights Reserved.
-
-NOTICE: Adobe permits you to use, modify, and distribute this file
-in accordance with the terms of the license agreement accompanying it.
-
--->
-
-<!--- The default skin class for the Spark Button component.  
-
-@see spark.components.Button
-
-@langversion 3.0
-@playerversion Flash 10
-@playerversion AIR 1.5
-@productversion Flex 4
--->
-<s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" 
-			 xmlns:fb="http://ns.adobe.com/flashbuilder/2009" minWidth="21" minHeight="21" alpha.disabled="0.5"
-			 height="29" fontSize="18" color="#B33535" >
-	
-	<!--s:Button height="29" fontSize="18" focusColor.normal="#CCCCCC"
-	
-	cornerRadius="14"
-	/-->
+<s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" 
+			 xmlns:fb="http://ns.adobe.com/flashbuilder/2009"
+		xmlns:s="library://ns.adobe.com/flex/spark" 
+		xmlns:mx="library://ns.adobe.com/flex/mx" 
+		height="29"
+		creationComplete="hostComponent.setIcon()">
 	<!-- host component -->
 	<fx:Metadata>
-		<![CDATA[ 
-		/** 
-		* @copy spark.skins.spark.ApplicationSkin#hostComponent
-		*/
-		[HostComponent("spark.components.Button")]
-		]]>
+		[HostComponent("net.vdombox.components.VdomButton")]
 	</fx:Metadata>
+	
+	<!-- states -->
+	<s:states>
+		<s:State name="disabled" />
+		<s:State name="down" />
+		<s:State name="over" />
+		<s:State name="up" />
+	</s:states>
 	
 	<fx:Script fb:purpose="styling">
 		<![CDATA[         
@@ -116,14 +96,12 @@ in accordance with the terms of the license agreement accompanying it.
 	<s:Rect id="fill" left="1" right="1" top="1" bottom="1" radiusX="2">
 		<s:fill>
 			<s:LinearGradient rotation="90">
-				<s:GradientEntry color="0xFFFFFF" 
+				<s:GradientEntry color="0xF1F1F1" 
 								 color.over="0xBBBDBD" 
-								 color.down="0xAAAAAA" 
-								 alpha="0.85" />
-				<s:GradientEntry color="0xD8D8D8" 
+								 color.down="0xAAAAAA" />
+				<s:GradientEntry color="0xB4B4B4" 
 								 color.over="0x9FA0A1" 
-								 color.down="0x929496" 
-								 alpha="0.85" />
+								 color.down="0x929496" />
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
@@ -132,10 +110,13 @@ in accordance with the terms of the license agreement accompanying it.
 	<!--- @private -->
 	<s:Rect id="lowlight" left="1" right="1" top="1" bottom="1" radiusX="2">
 		<s:fill>
-			<s:LinearGradient rotation="270">
-				<s:GradientEntry color="0x000000" ratio="0.0" alpha="0.0627" />
-				<s:GradientEntry color="0x000000" ratio="0.48" alpha="0.0099" />
-				<s:GradientEntry color="0x000000" ratio="0.48001" alpha="0" />
+			<s:LinearGradient rotation="90">
+				<s:GradientEntry color="0xF1F1F1" 
+								 color.over="0xBBBDBD" 
+								 color.down="0xAAAAAA" />
+				<s:GradientEntry color="0xB4B4B4" 
+								 color.over="0x9FA0A1" 
+								 color.down="0x929496" />
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
@@ -145,19 +126,12 @@ in accordance with the terms of the license agreement accompanying it.
 	<s:Rect id="highlight" left="1" right="1" top="1" bottom="1" radiusX="2">
 		<s:fill>
 			<s:LinearGradient rotation="90">
-				<s:GradientEntry color="0xFFFFFF"
-								 ratio="0.0"
-								 alpha="0.33" 
-								 alpha.over="0.22" 
-								 alpha.down="0.12"/>
-				<s:GradientEntry color="0xFFFFFF"
-								 ratio="0.48"
-								 alpha="0.33"
-								 alpha.over="0.22"
-								 alpha.down="0.12" />
-				<s:GradientEntry color="0xFFFFFF"
-								 ratio="0.48001"
-								 alpha="0" />
+				<s:GradientEntry color="0xF1F1F1" 
+								 color.over="0xBBBDBD" 
+								 color.down="0xAAAAAA" />
+				<s:GradientEntry color="0xB4B4B4" 
+								 color.over="0x9FA0A1" 
+								 color.down="0x929496" />
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
@@ -213,12 +187,19 @@ in accordance with the terms of the license agreement accompanying it.
 	
 	<!-- layer 8: text -->
 	<!--- @copy spark.components.supportClasses.ButtonBase#labelDisplay -->
-	<s:Label id="labelDisplay"
-			 textAlign="center"
-			 verticalAlign="middle"
-			 maxDisplayedLines="1"
-			 horizontalCenter="0" verticalCenter="1"
-			 left="10" right="10" top="2" bottom="2">
-	</s:Label>
+	<s:HGroup width="100%" height="100%" verticalAlign="middle" horizontalAlign="center" 
+			  paddingRight="10" paddingLeft="10" gap="2">
+		<mx:Image id="icon" height="20" width="20"/>
+		
+		<s:Label id="labelDisplay" fontFamily="Arial" fontSize="16"
+				 textAlign="center" fontWeight="bold"
+				 verticalAlign="middle"
+				 maxDisplayedLines="1"
+				 horizontalCenter="0" verticalCenter="1"
+				 left="10" right="10" top="2" bottom="2"/>
+	</s:HGroup>
 	
+	<!-- SkinParts
+	name=labelDisplay, type=spark.components.supportClasses.TextBase, required=false
+	-->
 </s:SparkSkin>
