--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ChangeApplicationView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ChangeApplicationView.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:HGroup xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" paddingBottom="10" paddingRight="10">
+		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" paddingBottom="10" paddingRight="10" xmlns:components="net.vdombox.components.*">
 	
 	<fx:Script>
 		<![CDATA[
@@ -53,7 +53,7 @@
 				creationComplete="applicationList_creationCompleteHandler(event)"/>
 		
 		
-		<s:Button id="btnOpenInCreateView" skinClass="net.vdombox.view.skins.OvalButtonSkin"
+		<components:VdomButton id="btnOpenInCreateView"
 					  label="{getLocalesWord( 'change_application_add_new_application' )}" 
 					  click="btnOpenInCreateView_clickHandler(event)"/>
 	</s:VGroup>
@@ -75,13 +75,12 @@
 		<s:HGroup horizontalAlign="right" gap="10" width="100%" >
 			
 			
-			<s:Button id="applicationEditor" 
+			<components:VdomButton id="applicationEditor"
 					  label="{getLocalesWord('change_application_edit')}" 
-					  click="applicationEditor_clickHandler(event)" skinClass="net.vdombox.view.skins.OvalButtonSkin"/>
+					  click="applicationEditor_clickHandler(event)"/>
 			
-			<s:Button id="btnOpenInEditor" 
+			<components:VdomButton id="btnOpenInEditor" 
 					  label="{getLocalesWord('change_application_open_in_editor' )}" 
-					  skinClass="net.vdombox.view.skins.OvalButtonSkin"
 					  click="btnOpenInEditor_clickHandler(event)"/>
 		</s:HGroup>
 		
