--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/CreateEditApplicationView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/CreateEditApplicationView.mxml
@@ -4,7 +4,7 @@
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:components="net.vdombox.ide.core.view.components" 
 		 width="100%" height="100%" gap="2" xmlns:components1="net.vdombox.ide.core.view.components.*"
-		 paddingBottom="10" paddingRight="10">
+		 paddingBottom="10" paddingRight="10" xmlns:components2="net.vdombox.components.*">
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.core.events.ApplicationManagerWindowEvent;
@@ -63,11 +63,11 @@
 		
 		<s:HGroup width="100%" horizontalAlign="right" >
 			
-			<s:Button id="btnCancel" skinClass="net.vdombox.view.skins.OvalButtonSkin"
+			<components2:VdomButton id="btnCancel"
 					  label="{getLocalesWord('create_edit_application_cancel' )}"
 					  click="{dispatchEvent( new ApplicationManagerWindowEvent( ApplicationManagerWindowEvent.CANCEL ) ) }"/>
 
-			<s:Button id="btnSave" skinClass="net.vdombox.view.skins.OvalButtonSkin"
+			<components2:VdomButton id="btnSave" 
 					  label="{getLocalesWord('create_edit_application_save' )}"
 					  click="{dispatchEvent( new ApplicationManagerWindowEvent( ApplicationManagerWindowEvent.SAVE_INFORMATION ) ) }"/>
 			
