--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/IconChooserWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/IconChooserWindowSkin.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" 
-		xmlns:mx="library://ns.adobe.com/flex/mx">
+		xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:components="net.vdombox.components.*">
 	<!-- host component -->
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.core.view.components.IconChooserWindow")]
@@ -11,7 +11,6 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.core.view.components.GalleryItemRenderer;
-			import net.vdombox.view.skins.OvalButtonSkin;
 			
 			protected function iconsList_creationCompleteHandler(event:FlexEvent):void
 			{
@@ -78,7 +77,7 @@
 		</s:List>
 		
 		<s:Group width="100%">
-			<s:Button id="btnOK" skinClass="net.vdombox.view.skins.OvalButtonSkin"
+			<components:VdomButton id="btnOK"
 				label="OK" right="10" 	click="hostComponent.selectIcon()" />
 		</s:Group>
 		
