--- a/IDE/v.02/common/src/net/vdombox/view/skins/VdomButtonSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/view/skins/VdomButtonSkin.mxml
@@ -3,7 +3,7 @@
 			 xmlns:fb="http://ns.adobe.com/flashbuilder/2009"
 		xmlns:s="library://ns.adobe.com/flex/spark" 
 		xmlns:mx="library://ns.adobe.com/flex/mx" 
-		height="29"
+		width="100%" height="100%"
 		creationComplete="hostComponent.setIcon()">
 	<!-- host component -->
 	<fx:Metadata>
@@ -187,16 +187,13 @@
 	
 	<!-- layer 8: text -->
 	<!--- @copy spark.components.supportClasses.ButtonBase#labelDisplay -->
-	<s:HGroup width="100%" height="100%" verticalAlign="middle" horizontalAlign="center" 
-			  paddingRight="10" paddingLeft="10" gap="2">
-		<mx:Image id="icon" height="20" width="20"/>
+	<s:HGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle"
+			  paddingRight="15" paddingLeft="15" gap="2">
+		<mx:Image id="icon" height="15" width="15"/>
 		
-		<s:Label id="labelDisplay" fontFamily="Arial" fontSize="16"
-				 textAlign="center" fontWeight="bold"
-				 verticalAlign="middle"
-				 maxDisplayedLines="1"
-				 horizontalCenter="0" verticalCenter="1"
-				 left="10" right="10" top="2" bottom="2"/>
+		<s:Label id="labelDisplay" fontFamily="Arial" fontSize="18" paddingTop="2"
+				 textAlign="center"
+				 maxDisplayedLines="1"/>
 	</s:HGroup>
 	
 	<!-- SkinParts
