Fix bug with set empty resource
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7230 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxAttribute.mxml
@@ -38,9 +38,10 @@
 						selectedItem = comboBoxData[ comboBoxData.length - 1 ];
 				}
 				
-				comboBoxData.sort = new Sort();
+				/*comboBoxData.sort = new Sort();
 				comboBoxData.sort.fields = [ new SortField( "label", true ) ];
-				comboBoxData.refresh();
+				comboBoxData.refresh();*/
+				
 				
 				valueField.dataProvider = comboBoxData;
 				valueField.selectedItem = selectedItem;
