--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxObjectAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxObjectAttribute.mxml
@@ -46,9 +46,12 @@
 					if ( element == objectListVO.id )
 						selectedItem = objectListVO;
 				}
-				comboBoxData.sort = new Sort();
-				comboBoxData.sort.fields = [ new SortField( "name", true ) ];
-				comboBoxData.refresh();
+				if ( comboBoxData )
+				{
+					comboBoxData.sort = new Sort();
+					comboBoxData.sort.fields = [ new SortField( "name", true ) ];
+					comboBoxData.refresh();
+				}
 				
 				valueField.dataProvider = comboBoxData;
 				valueField.selectedItem = selectedItem;
