--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
@@ -5,7 +5,7 @@
 			 xmlns:fb="http://ns.adobe.com/flashbuilder/2009"
 			 xmlns:resourceBrowserWindow="net.vdombox.ide.modules.wysiwyg.view.components.windows.resourceBrowserWindow.*"
 			 width="790" height="550" minWidth="700" minHeight="500"
-			 focusColor="#CCCCCC">
+			 focusColor="#CCCCCC" xmlns:components="net.vdombox.components.*">
 	<fx:Metadata>
 		<![CDATA[ 
 		/** 
@@ -104,8 +104,7 @@
 				
 				<mx:Spacer width="100%"/>
 				
-				<mx:Button height="29" cornerRadius="14" 
-						   label="{ resourceManager.getString( 'Wysiwyg_General', 'resource_selector_window_upload' ) }" 
+				<components:VdomButton label="{ resourceManager.getString( 'Wysiwyg_General', 'resource_selector_window_upload' ) }" 
 						   click="hostComponent.uploadFile(event)"
 						   icon="@Embed(source='icons/Add.png')"
 						   focusColor="#CCCCCC"/>	
@@ -161,14 +160,14 @@
 						  paddingBottom="2" paddingLeft="10" paddingRight="10" paddingTop="2"
 						  verticalAlign="middle" horizontalAlign="right">
 					
-					<mx:Button id="cancelButton" width="48" height="29"
-							  click="hostComponent.onCancelClick()" cornerRadius="14"
+					<components:VdomButton id="cancelButton" width="48"
+							  click="hostComponent.onCancelClick()"
 							  icon="@Embed(source='icons/Cancel.png')"
 							  focusColor.normal="#CCCCCC"/>
 					
-					<s:Button height="29" fontSize="18" focusColor.normal="#CCCCCC"
+					<components:VdomButton focusColor.normal="#CCCCCC"
 							  label="{ resourceManager.getString( 'Wysiwyg_General', 'resource_selector_window_insert' ) }"
-							  click="hostComponent.onApplyClick()" color="#B33535" cornerRadius="14"
+							  click="hostComponent.onApplyClick()" color="#B33535"
 							  />
 					
 				</s:HGroup>
