--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
@@ -4,7 +4,7 @@
 				xmlns:mx="library://ns.adobe.com/flex/mx" 
 				autoDrawBackground="true"
 				doubleClickEnabled="true"
-				
+				doubleClick="doubleClickHandler(event)"
 				>
 	<s:states>
 		<s:State name="normal" />
@@ -21,6 +21,7 @@
 			import net.vdombox.ide.common.vo.ResourceVO;
 			
 			public static const RENDERER_CHANGED : String = "rendererChanged";
+			public static const RENDERER_DOUBLE_CLICK : String = "rendererDoubleClick";
 			public static const ICON_REQUEST : String = "iconRequest1";
 			
 			private var _resourceVO : ResourceVO;
@@ -111,6 +112,13 @@
 					return;
 				
 				imageHolder.source = event.target.content;
+			}
+			
+			protected function doubleClickHandler(event:MouseEvent):void
+			{
+				// TODO Auto-generated method stub
+				dispatchEvent( new Event( RENDERER_DOUBLE_CLICK ) );
+				
 			}
 			
 		]]>
