--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionElement.mxml
@@ -8,6 +8,8 @@
 
 	<fx:Script>
 		<![CDATA[
+			import mx.controls.Image;
+			
 			import net.vdombox.ide.common.vo.ActionParameterVO;
 			import net.vdombox.ide.common.vo.ClientActionVO;
 			import net.vdombox.ide.common.vo.EventParameterVO;
@@ -25,9 +27,14 @@
 
 			[SkinPart( required="true" )]
 			public var hideButton : ElementButton;
+			
+			[SkinPart( required="true" )]
+			public var showElement : Image;
 
 			[Bindable]
 			public var title : String;
+			
+			private var _showElements : Boolean = true;
 
 			private var _data : Object;
 
@@ -35,6 +42,39 @@
 
 			private var mouseOffcetX : int;
 			private var mouseOffcetY : int;
+			
+			[Embed( source = "assets/eye_0w.png" )]
+			public var noVisibleEye : Class;
+			
+			[Embed( source = "assets/eye_1.png" )]
+			public var visibleEye : Class;
+
+			public function get showElements():Boolean
+			{
+				return _showElements;
+			}
+
+			public function set showElements(value:Boolean):void
+			{
+				_showElements = value;
+				if ( _showElements )
+					showElement.source = visibleEye;
+				else
+					showElement.source = noVisibleEye;
+			}
+			
+			public function set visibleElements(value:Boolean):void
+			{
+				visible = value;
+			}
+			
+			public function get idElement() : String
+			{
+				if ( _data )
+					return _data.id;
+				else
+					return "";
+			}
 
 			[Bindable]
 			public function get data() : Object
@@ -159,6 +199,12 @@
 			{
 				stage.removeEventListener( MouseEvent.MOUSE_MOVE, stage_mouseMoveHandler );
 				stage.removeEventListener( MouseEvent.MOUSE_UP, stage_mouseUpHandler );
+			}
+			
+			public function showHandler() : void
+			{
+				showElements = !_showElements;
+				dispatchEvent( new ElementEvent ( ElementEvent.SHOW_ELEMENT ) );
 			}
 		]]>
 	</fx:Script>
