--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
@@ -4,7 +4,7 @@
 			 xmlns:mx="library://ns.adobe.com/flex/halo"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 minWidth="200"
-			 creationComplete="sparkskin1_creationCompleteHandler(event)">
+			 creationComplete="sparkskin1_creationCompleteHandler(event)" xmlns:mx1="library://ns.adobe.com/flex/mx">
 
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.modules.events.view.components.EventElement")]
@@ -174,6 +174,11 @@
 						 color="#FFFFFF" left="5" right="5" textAlign="center"
 						 verticalCenter="0"
 						 maxDisplayedLines="1"/>
+				
+				<mx1:Image id="showElement" 
+						   right="4" top="4"
+						   source="@Embed('assets/eye_1.png')"
+						   click="hostComponent.showHandler()"/>
 			</s:Group>
 
 			<s:Group id="contentGroup"
