--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationManagerSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationManagerSkin.mxml
@@ -57,9 +57,9 @@
 			
 		
 		<s:Group width="100%" height="100%" >
-			<components:ChangeApplicationView id="changeApplicationView" width="100%" height="100%" 
+			<components:ApplicationsView id="applicationsView" width="100%" height="100%" 
 											  visible="true" />
-			<components:CreateEditApplicationView id="createEditApplicationView" width="100%" height="100%" 
+			<components:ApplicationPropertiesView id="applicationPropertiesView" width="100%" height="100%" 
 												  visible="false" />
 		</s:Group>
 		
