--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanel.mxml
@@ -19,7 +19,7 @@
 	</fx:Script>
 
 	<mx:Tree id="objectsTree"
-			 itemRenderer="{new ClassFactory( TreeItemRenderer )}"
+			 itemRenderer="net.vdombox.ide.modules.events.view.components.ObjectsTreePanelItemRenderer"
 			 height="100%"
 			 width="100%"/>
 
