--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionItemRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionItemRenderer.mxml
@@ -7,7 +7,10 @@
 
 	<fx:Script>
 		<![CDATA[
+			import mx.binding.utils.BindingUtils;
+			
 			import net.vdombox.ide.common.vo.ServerActionVO;
+			import net.vdombox.ide.modules.events.events.PanelsEvent;
 			
 			[Embed(source='assets/action.png')]
 			public var actionIcon:Class;
@@ -21,7 +24,14 @@
 			[Bindable]
 			private var currentIcon : Class;
 			
+			[Embed( source = "assets/eye_0t.png" )]
+			public var noVisibleEye : Class;
 			
+			[Embed( source = "assets/eye_1t.png" )]
+			public var visibleEye : Class;
+			
+			[Bindable]
+			private var _data : Object;
 			
 			override public function set data( value : Object ) : void
 			{
@@ -31,6 +41,59 @@
 					currentIcon = value[ "language" ] == "python" ? pythonIcon : vbscriptIcon;
 				else
 					currentIcon = actionIcon;
+				
+				_data = value;
+				BindingUtils.bindSetter( visibleEventHandler, _data, "visibleEvent", false, false );
+				dispatchEvent( new PanelsEvent ( PanelsEvent.DATE_SETTED ) );
+			}
+			
+			public function get actionName() : String
+			{
+				if ( _data )
+					return _data.name as String;
+				else
+					return "";
+			}
+			
+			public function get actionID() : String
+			{
+				if ( _data )
+					return _data.id as String;
+				else
+					return "";
+			}
+			
+			public function visibleEventHandler( value : Object ) : void
+			{
+				if ( _data )
+					setEyeState(!_data.visibleEvent);
+			}
+			
+			public function get eyeOpened() : Boolean
+			{
+				return _data.visibleEvent;
+			}
+			
+			protected function eyeClickHandler(event:MouseEvent):void
+			{
+				if ( eyes.source )
+				{
+					setEyeState(!_data.visibleEvent);
+					
+					dispatchEvent(  new PanelsEvent( PanelsEvent.EYES_CLICK ) );
+				}
+			}
+			
+			public function setEyeState( value : Boolean ) : void
+			{
+				_data.visibleEvent = value;
+				
+				eyes.source = eyeOpened ? visibleEye : noVisibleEye;
+			}
+			
+			public function setEyeNull() : void
+			{	
+				eyes.source = null;
 			}
 		]]>
 	</fx:Script>
@@ -50,40 +113,67 @@
 		<s:State name="selectedAndShowsCaret" />
 	</s:states>
 
-	<!--<s:Rect bottom="0" left="0" right="0" top="0">
-
-		<s:stroke.normalAndShowsCaret>
-
-			<s:SolidColorStroke color="{selectionColor}"
-								weight="1" />
-		</s:stroke.normalAndShowsCaret>
-
-		<s:stroke.hoveredAndShowsCaret>
-
-			<s:SolidColorStroke color="{selectionColor}"
-								weight="1" />
-		</s:stroke.hoveredAndShowsCaret>
-
-		<s:stroke.selectedAndShowsCaret>
-
-			<s:SolidColorStroke color="{selectionColor}"
-								weight="1" />
-		</s:stroke.selectedAndShowsCaret>
-
+	<s:Rect left="-2" width="100%" top="-2" bottom="-2">
 		<s:fill>
-
-			<s:SolidColor color.hovered="{rollOverColor}" color.hoveredAndShowsCaret="{rollOverColor}"
-						  color.normal="{contentBackgroundColor}"
-						  color.normalAndShowsCaret="{contentBackgroundColor}"
-						  color.selected="{selectionColor}" color.selectedAndShowsCaret="{selectionColor}" />
+			<s:SolidColor id="rectColor"
+						  color.normal="#3A3A3A"
+						  color.hovered="#00000A"
+						  alpha.hovered="0.8"
+						  color.selected="#00000A" />
 		</s:fill>
-	</s:Rect>-->
-
-	<s:HGroup height="20"
-			  left="0" right="0" verticalAlign="middle">
-
-		<mx:Image height="16" source="{ currentIcon }" width="16" />
-
-		<s:Label id="labelDisplay" />
-	</s:HGroup>
+	</s:Rect>
+	
+	<s:Group id="groupContent"
+			 left="20"
+			 width="100%"
+			 top="-2"
+			 bottom="-2">
+		
+		<s:HGroup width="100%" height="100%" verticalAlign="middle">
+			
+			<s:HGroup height="20"
+					  left="0" right="0" verticalAlign="middle">
+				
+				<mx:Image height="16" source="{ currentIcon }" width="16" />
+				
+				<s:Label id="labelDisplay" color="#FFFFFF" />
+			</s:HGroup>
+			
+			<mx:Spacer width="100%" />
+			
+		</s:HGroup>
+		
+	</s:Group>
+	
+	<s:Group id="eyesGroup"
+			 top="-2"
+			 bottom="-2"
+			 left="-2"
+			 width="22"
+			 height="100%"
+			 mouseDown="{ eyeClickHandler(event); event.stopImmediatePropagation() }">
+		
+		<s:Rect width="100%" top="0" bottom="-2">
+			<s:fill>
+				<s:SolidColor color="#585858" />
+			</s:fill>
+		</s:Rect>
+		
+		<s:VGroup width="22" height="100%" verticalAlign="middle" horizontalAlign="center">
+			<mx:Image id="eyes" width="16" height="14" source="@Embed('assets/eye_1.png')" />
+		</s:VGroup>
+		
+	</s:Group>
+	
+	<s:Line top="-2" left="-2" width="100%">
+		<s:stroke>
+			<s:SolidColorStroke color="#FFFFFF" alpha="0.5" weight="1" />
+		</s:stroke>
+	</s:Line>
+	
+	<s:Line bottom="-2" left="-2" width="100%">
+		<s:stroke>
+			<s:SolidColorStroke color="#000000" alpha="0.5" weight="1" />
+		</s:stroke>
+	</s:Line>
 </s:ItemRenderer>
