--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanelItemRenderer.mxml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
-				xmlns:s="library://ns.adobe.com/flex/spark"
-				xmlns:mx="library://ns.adobe.com/flex/mx"
-				
-				focusEnabled="false">
-
+<s:MXTreeItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
+					  xmlns:s="library://ns.adobe.com/flex/spark" 
+					  xmlns:mx="library://ns.adobe.com/flex/mx">
 	<fx:Script>
 		<![CDATA[
-			import mx.binding.utils.BindingUtils;
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.ide.common.vo.EventVO;
 			import net.vdombox.ide.modules.events.events.PanelsEvent;
+			
+			private var _eyeOpened : Boolean  = true;
+			
+			private var dataChanged : Boolean = false;
+			private var _data : XML;
 			
 			[Embed( source = "assets/eye_0t.png" )]
 			public var noVisibleEye : Class;
@@ -19,79 +19,70 @@
 			[Embed( source = "assets/eye_1t.png" )]
 			public var visibleEye : Class;
 			
-			[Bindable]
-			private var _data : Object;
-			
-			[Bindable]
-			private var _visible : Object;
-			
 			override public function set data( value : Object ) : void
 			{
 				super.data = value;
-				_data = value;
-				BindingUtils.bindSetter( visibleEventHandler, _data, "visibleEvent", false, false );
-				dispatchEvent( new PanelsEvent ( PanelsEvent.DATE_SETTED ) );
-			}
-			
-			public function get eventName() : String
-			{
-				if ( _data )
-					return _data.name as String;
-				else
-					return "";
+				
+				dataChanged = true
+				_data = value as XML;
 			}
 			
 			public function get eyeOpened() : Boolean
 			{
-				return _data.visibleEvent;
+				return _eyeOpened;
 			}
 			
-			public function visibleEventHandler( value : Object ) : void
+			public function get objectID() : String
 			{
-				if ( _data )
-					setEyeState(!_data.visibleEvent);
+				return _data.@id;
 			}
 			
-			protected function eyeClickHandler(event:MouseEvent):void
+			private function eyeClickHandler( event : Event ) : void
 			{
-				if ( eyes.source )
+				// invert state of eye
+				setEyeState(!_eyeOpened);
+				
+				dispatchEvent(  new PanelsEvent( PanelsEvent.EYES_CLICK ) );
+			}
+			
+			private function setEyeState( value : Boolean ) : void
+			{
+				_eyeOpened = value;
+				
+				eyes.source = _eyeOpened ? visibleEye : noVisibleEye;
+				
+				// 
+				if ( _data.@visible[ 0 ] )
+					_data.@visible = _eyeOpened
+			}
+			
+			override public function validateProperties() : void
+			{
+				super.validateProperties();
+				
+				if ( !dataChanged )
+					return;
+				
+				dataChanged = false;
+				
+				if ( !_data )
+					return
+				
+				if ( _data.@visible[ 0 ] )
 				{
-					setEyeState(!_data.visibleEvent);
-				
-					dispatchEvent(  new PanelsEvent( PanelsEvent.EYES_CLICK ) );
+					setEyeState( _data.@visible == "true");
 				}
-			}
-			
-			public function setEyeState( value : Boolean ) : void
-			{
-				_data.visibleEvent = value;
-				
-				eyes.source = eyeOpened ? visibleEye : noVisibleEye;
-			}
-			
-			public function setEyeNull() : void
-			{	
-				eyes.source = null;
 			}
 			
 		]]>
 	</fx:Script>
-
+	
 	<s:states>
-
-		<s:State name="normal" />
-
+		<s:State name="normal" />            
 		<s:State name="hovered" />
-
 		<s:State name="selected" />
-
-		<s:State name="normalAndShowsCaret" />
-
-		<s:State name="hoveredAndShowsCaret" />
-
-		<s:State name="selectedAndShowsCaret" />
 	</s:states>
-
+	
 	<s:Rect left="-2" width="100%" top="-2" bottom="-2">
 		<s:fill>
 			<s:SolidColor id="rectColor"
@@ -110,13 +101,24 @@
 		
 		<s:HGroup width="100%" height="100%" verticalAlign="middle">
 			
-			<s:HGroup height="20"
-					  left="0" right="0" verticalAlign="middle">
-				
-				<mx:Image height="16" source="@Embed(source='assets/events.png')" width="16" />
-				
-				<s:Label id="labelDisplay" color="#FFFFFF" />
-			</s:HGroup>
+			<s:Rect id="indentationSpacer" width="{treeListData.indent}" percentHeight="100">
+				<s:fill>
+					<s:SolidColor color="#585858" />
+				</s:fill>
+			</s:Rect>
+			
+			<s:Group id="disclosureGroup">
+				<s:BitmapImage source="{treeListData.disclosureIcon}" visible="{treeListData.hasChildren}" />
+			</s:Group>
+			
+			<s:BitmapImage source="{treeListData.icon}" />
+			
+			<s:TextInput id="labelField"
+						 color="#FFFFFF"
+						 text="{treeListData.label}"
+						 paddingTop="2"
+						 editable="false" contentBackgroundAlpha="0"
+						 borderVisible="false" selectable="false"/>
 			
 			<mx:Spacer width="100%" />
 			
@@ -139,7 +141,7 @@
 		</s:Rect>
 		
 		<s:VGroup width="22" height="100%" verticalAlign="middle" horizontalAlign="center">
-			<mx:Image id="eyes" width="16" height="14" source="@Embed('assets/eye_1.png')" />
+			<mx:Image id="eyes" width="16" height="14" source="@Embed('assets/eye_1t.png')" />
 		</s:VGroup>
 		
 	</s:Group>
@@ -155,4 +157,5 @@
 			<s:SolidColorStroke color="#000000" alpha="0.5" weight="1" />
 		</s:stroke>
 	</s:Line>
-</s:ItemRenderer>
+
+</s:MXTreeItemRenderer>
